<resources>
    <string name="app_name">Shri Ram</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_logout">Logout</string>

    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
    <!-- Toolbar titles when navigation menu item is selected -->
    <string name="label_category">Category</string>
    <string name="label_addimage">Click me!</string>
    <string name="category1">Rings</string>
    <string name="category2">Bangles</string>
    <string name="category3">Chains</string>
    <string name="category4">Necklace</string>
    <string name="label_id">ID</string>
    <string name="error_image">Image is required</string>
    <string name="error_id">Give me an Id</string>
    <string name="error_price">Don\'t sell me for free!</string>
    <string name="error_size">Size is required</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_name">Name</string>

    <string name="label_price">Selling Price</string>

    <string name="label_size">Available Sizes</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_price">Price</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_size_available">Sizes</string>

    <!-- Units for price of the item (Rupees) [CHAR LIMIT=5] -->
    <string name="unit_item_price">\u20B9</string>

    <!-- Label for editor menu option to save item and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Dialog message to ask the user to confirm deleting the current item [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this item?</string>

    <!-- Label for editor overflow menu option that deletes the current item [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Dialog button text for the option to confirm deleting the current item [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current item [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current item [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <string name="size1">30</string>
    <string name="size2">32</string>
    <string name="size3">34</string>
    <string name="size4">36</string>

    <string-array name="nav_item_activity_titles">
        <item>Palakh Jewellers - Rings</item>
        <item>Bangles</item>
        <item>Chain</item>
        <item>Necklace</item>
    </string-array>

    <string-array name="categories">
        <item>@string/category1</item>
        <item>@string/category2</item>
        <item>@string/category3</item>
        <item>@string/category4</item>
    </string-array>
    <string name="title_activity_editory">EditoryActivity</string>
    <string name="category_unknown">UNKNOWN</string>
    <string name="save_and_create_dialog_msg">Are you sure to Create a new record?</string>
    <string name="create">Create</string>
    <string name="record_created_success">Record created successfully!</string>
    <string name="connection_error">No internet connection!</string>
    <string name="id_already_exist_error">Item with ID: %1$s already exists. Please select unique ID.</string>
    <string name="ok">Ok</string>
    <string name="card_image_content_description">Item Image</string>
    <string name="option_button_desc">This is the option button</string>
    <string name="size_item_label">Size:</string>
</resources>
