<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_category1"
            android:icon="@drawable/ic_category1"
            android:title="@string/category1" />
        <item
            android:id="@+id/nav_category2"
            android:icon="@drawable/ic_category2"
            android:title="@string/category2" />
        <item
            android:id="@+id/nav_category3"
            android:icon="@drawable/ic_category3"
            android:title="@string/category3" />
        <item
            android:id="@+id/nav_category4"
            android:icon="@drawable/ic_category4"
            android:title="@string/category4" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
