<?xml version="1.0" encoding="utf-8"?><!-- Layout for the editor -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        android:weightSum="1"
        tools:context=".EditoryActivity">

        <!-- Item Image upload -->
        <LinearLayout
            android:id="@+id/add_conatiner_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="1">
            <!-- Label -->

            <android.support.v7.widget.CardView
                android:id="@+id/card_image_view"
                android:layout_width="@dimen/album_cover_height"
                android:layout_height="@dimen/album_cover_height"
                android:layout_gravity="center"
                android:layout_margin="@dimen/card_margin"
                android:alpha="0.7"
                android:clickable="true"
                android:elevation="3dp"
                card_view:cardCornerRadius="@dimen/card_album_radius">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <ImageView
                        android:id="@+id/select_imagebutton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="false"
                        android:paddingBottom="12dp"
                        android:scaleType="center"
                        android:src="@drawable/ic_add_a_photo_black_48dp" />

                    <TextView
                        android:id="@+id/add_image_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="46dp"
                        android:text="@string/label_addimage" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>

        <!-- Item Category Section -->
        <LinearLayout
            android:id="@+id/add_container_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/label_category" />

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Category drop-down spinner -->
                <Spinner
                    android:id="@+id/spinner_category"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>
        </LinearLayout>

        <!-- Id Section -->
        <LinearLayout
            android:id="@+id/add_container_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/label_id" />

            <!-- Input fields -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Id Input field -->
                <EditText
                    android:id="@+id/input_id"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_item_name"
                    android:inputType="text" />
            </RelativeLayout>

        </LinearLayout>

        <!-- Price Section -->
        <LinearLayout
            android:id="@+id/add_container_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/label_price" />

            <!-- Cost Input fields -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- cost Input field -->
                <EditText
                    android:id="@+id/input_price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_item_price"
                    android:inputType="number" />

                <!-- Units for weight (kg) -->
                <TextView
                    android:id="@+id/label_priceunit"
                    style="@style/EditorUnitsStyle"
                    android:text="@string/unit_item_price" />

            </RelativeLayout>
        </LinearLayout>


        <!-- Available Sizes-->
        <LinearLayout
            android:id="@+id/add_container_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/label_size" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Size Input fields -->
                <LinearLayout
                    android:id="@+id/checkbox_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="8dp"
                    android:weightSum="1">

                    <CheckBox
                        android:id="@+id/checkbox_size1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/size1" />

                    <CheckBox
                        android:id="@+id/checkbox_size2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/size2" />

                    <CheckBox
                        android:id="@+id/checkbox_size3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/size3" />

                    <CheckBox
                        android:id="@+id/checkbox_size4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/size4" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>